@@ -14,6 +14,7 @@ import tfmc.justin.activity.managers.ActivityManager;
 import tfmc.justin.activity.models.ActivityDef;
 import tfmc.justin.activity.models.PlayerData;
 import tfmc.justin.activity.models.Recorded;
+import tfmc.justin.activity.utils.Utils;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -32,7 +33,11 @@ import java.util.UUID;
 // ====================================
 public class ActivityCommand implements CommandExecutor, TabCompleter {
 
-    private static final List<String> SUBCOMMANDS = Arrays.asList("reload", "reset", "add");
+    private static final List<String> SUBCOMMANDS =
+        Arrays.asList("reload", "check", "reset", "givereroll", "add");
+
+    // What 'check' alone gets: the read-only half of the command
+    private static final List<String> READ_ONLY_SUBCOMMANDS = List.of("check");
 
     // The one optional trailing argument 'add' takes
     private static final String FORCE = "--force";
@@ -61,23 +66,53 @@ public class ActivityCommand implements CommandExecutor, TabCompleter {
             return true;
         }
 
-        if (!sender.hasPermission("activity.admin")) {
-            sender.sendMessage(messages().get("admin.no-permission"));
+        String sub = args[0].toLowerCase(Locale.ROOT);
+        // ====================================
+        // An unrecognised subcommand is a usage error, not a permission one:
+        // permissionFor() maps it to activity.admin, which used to hide the
+        // usage line from exactly the check-only sender who mistyped. A sender
+        // holding neither permission still learns nothing.
+        // ====================================
+        if (!SUBCOMMANDS.contains(sub)) {
+            boolean anything = sender.hasPermission("activity.admin") || sender.hasPermission("activity.check");
+            sender.sendMessage(messages().get(anything ? "admin.usage" : "admin.no-permission"));
             return true;
         }
 
-        switch (args[0].toLowerCase(Locale.ROOT)) {
+        if (!sender.hasPermission(permissionFor(sub))) {
+            sender.sendMessage(messages().get("admin.no-permission"));
+            // A refused mutating attempt is logged too: someone probing for
+            // what they are allowed to run must not do it silently. 'check' is
+            // read-only and stays out of the log whichever way it ends.
+            if (!sub.equals("check")) {
+                audit(sender, "action=" + sub + " result=denied");
+            }
+            return true;
+        }
+
+        switch (sub) {
             case "reload":
                 manager.reload();
                 sender.sendMessage(messages().get("admin.reloaded"));
+                audit(sender, "action=reload result=done");
+                return true;
+            case "check":
+                handleCheck(sender, args);
                 return true;
             case "reset":
                 handleReset(sender, args);
+                return true;
+            case "givereroll":
+                handleGiveReroll(sender, args);
                 return true;
             case "add":
                 handleAdd(sender, args);
                 return true;
             default:
+                // Unreachable: sub is one of SUBCOMMANDS, checked above, and
+                // every case here matches one of them. Kept because the
+                // compiler cannot prove that and requires this switch
+                // statement to return on every path.
                 sender.sendMessage(messages().get("admin.usage"));
                 return true;
         }
@@ -98,11 +133,13 @@ public class ActivityCommand implements CommandExecutor, TabCompleter {
     private void handleReset(CommandSender sender, String[] args) {
         if (args.length < 2) {
             sender.sendMessage(messages().get("admin.usage"));
+            audit(sender, "action=reset result=usage");
             return;
         }
 
         OfflinePlayer target = resolve(sender, args[1]);
         if (target == null) {
+            audit(sender, "action=reset typed=" + quoted(args[1]) + " result=unknown-player");
             return;
         }
 
@@ -114,10 +151,73 @@ public class ActivityCommand implements CommandExecutor, TabCompleter {
         // The resolved name, not what was typed - casing and the cache decide
         // who was actually reset
         sender.sendMessage(messages().get("admin.reset-done", "%player%", name(target, args[1])));
+        audit(sender, "action=reset " + who(target, args[1]) + " result=done");
     }
 
-    private void handleAdd(CommandSender sender, String[] args) {
-        if (!wellFormedAdd(args)) {
+    // ====================================
+    // /activity givereroll <player> gives one consumed reroll back - it does
+    // NOT reroll anything, which is why it is not called 'reroll'.
+    //
+    // peek() rather than rolled(): a player with no row, and a player whose
+    // stored day is not today, have both used no rerolls today - and asking
+    // about them must neither put them in the file nor perform the rollover
+    // as a side effect, which used to wipe a stale player's day while the
+    // audit line said 'noop'. It is also what 'check' reports for them, so
+    // the two commands cannot contradict each other.
+    // ====================================
+    private void handleGiveReroll(CommandSender sender, String[] args) {
+        if (args.length < 2) {
+            sender.sendMessage(messages().get("admin.usage"));
+            audit(sender, "action=givereroll result=usage");
+            return;
+        }
+
+        OfflinePlayer target = resolve(sender, args[1]);
+        if (target == null) {
+            audit(sender, "action=givereroll typed=" + quoted(args[1]) + " result=unknown-player");
+            return;
+        }
+
+        PlayerData data = manager.getStore().peek(target.getUniqueId());
+        boolean today = isToday(data, manager.getConfiguration().currentKeys());
+        int before = today ? data.rerolls() : 0;
+        boolean given = today && data.refundReroll();
+        if (given) {
+            manager.getStore().markDirty();
+        }
+
+        int after = today ? data.rerolls() : 0;
+        sender.sendMessage(given
+            ? messages().get("admin.reroll-given", "%before%", before, "%after%", after,
+                "%player%", name(target, args[1]))
+            : messages().get("admin.reroll-none-used", "%player%", name(target, args[1])));
+        audit(sender, "action=givereroll " + who(target, args[1]) + " rerolls=" + before + "->" + after
+            + " result=" + (given ? "done" : "noop"));
+    }
+
+    // Whether this row's stored day is the one a rollover would leave it on.
+    // A stale week implies a stale day: roll() wipes the day either way.
+    private static boolean isToday(PlayerData data, ActivityConfiguration.Keys keys) {
+        return data != null && data.weekKey().equals(keys.week()) && data.dayKey().equals(keys.day());
+    }
+
+    // ====================================
+    // /activity check <player>: everything staff needs to answer "why did I
+    // not get a point", and nothing else. peek() is the read-only lookup - it
+    // neither creates a row for a player who has none nor rolls the one it
+    // finds.
+    //
+    // The rollover is applied to the answer instead, the way PlaceholderHook
+    // does it: a stored week that is not the current one has nothing on the
+    // bar, a stale day has nothing done today and no draw. Printing the raw
+    // stored numbers under a "Today" label described a day the player's next
+    // login will wipe - and contradicted /activity givereroll, which reports
+    // the same stale player as having used no rerolls. The stored keys are
+    // still printed, and said to be stale, because a stale pair is itself the
+    // answer to some reports.
+    // ====================================
+    private void handleCheck(CommandSender sender, String[] args) {
+        if (args.length < 2) {
             sender.sendMessage(messages().get("admin.usage"));
             return;
         }
@@ -127,11 +227,122 @@ public class ActivityCommand implements CommandExecutor, TabCompleter {
             return;
         }
 
+        String player = name(target, args[1]);
+        PlayerData data = manager.getStore().peek(target.getUniqueId());
+        if (data == null) {
+            sender.sendMessage(messages().get("admin.check-no-data", "%player%", player));
+            return;
+        }
+
+        ActivityConfiguration config = manager.getConfiguration();
+        // One clock reading for both keys, so they cannot straddle a midnight
+        // tick and disagree about which day this week it is
+        ActivityConfiguration.Keys keys = config.currentKeys();
+        boolean currentWeek = data.weekKey().equals(keys.week());
+        boolean today = isToday(data, keys);
+        // Clamped: peek() never runs the clamp rolled() does, so a lowered
+        // bar.max would otherwise print "60/50"
+        int points = currentWeek ? Math.min(data.points(), config.barMax()) : 0;
+        int claimed = currentWeek ? Math.min(data.claimedPoints(), config.barMax()) : 0;
+
+        sender.sendMessage(messages().get("admin.check-header", "%player%", player));
+        if (!today) {
+            sender.sendMessage(messages().get("admin.check-stale",
+                "%week%", data.weekKey(), "%day%", data.dayKey()));
+        }
+        sender.sendMessage(messages().get("admin.check-points", "%points%", points,
+            "%max%", config.barMax(), "%claimed%", claimed));
+        // Clamped like the weekly points above: peek() never runs the
+        // clamp rolled() does, so a lowered daily.max would otherwise print
+        // "15/10" until the row is next touched.
+        int dailyPoints = today ? Math.min(data.dailyPoints(), config.dailyMax()) : 0;
+        sender.sendMessage(messages().get("admin.check-daily", "%points%", dailyPoints,
+            "%max%", config.dailyMax()));
+        sender.sendMessage(messages().get("admin.check-rerolls", "%used%", today ? data.rerolls() : 0,
+            "%max%", config.rerollsPerDay()));
+        sender.sendMessage(messages().get("admin.check-keys", "%week%", data.weekKey(),
+            "%day%", data.dayKey()));
+
+        List<String> tasks = today ? data.tasks() : List.of();
+        if (tasks.isEmpty()) {
+            sender.sendMessage(messages().get("admin.check-no-tasks"));
+            return;
+        }
+
+        for (int slot = 0; slot < tasks.size(); slot++) {
+            String id = tasks.get(slot);
+            ActivityDef def = config.activity(id);
+            // An id a reload has dropped still sits in the draw until the
+            // player is next touched, so it is named by its raw id
+            String display = def == null ? id : def.display();
+            int count = data.count(id);
+            // The display name goes in last: it is config text, and
+            // substitution walks the pairs in order, so nothing in it can
+            // stand in for a placeholder that has not been filled yet
+            sender.sendMessage(data.isRevealed(id)
+                ? messages().get("admin.check-task-revealed", "%slot%", slot + 1, "%count%", count,
+                    "%points%", def == null ? 0 : def.worth(count), "%activity%", display)
+                : messages().get("admin.check-task-hidden", "%slot%", slot + 1, "%activity%", display));
+        }
+    }
+
+    // ====================================
+    // One line per admin action that changed something, at INFO, after the
+    // fact and carrying what came of it - a line in the log means it really
+    // happened. 'check' is read-only and writes none; 'reload' does, because
+    // "who swapped the config out from under us" is the same question.
+    // Names are sanitised: they reach here from chat.
+    // ====================================
+    private void audit(CommandSender sender, String what) {
+        manager.logger().info("ACTIVITY-AUDIT sender=" + quoted(sender.getName()) + " " + what);
+    }
+
+    private String who(OfflinePlayer target, String typed) {
+        return "target=" + quoted(name(target, typed)) + " uuid=" + target.getUniqueId();
+    }
+
+    // ====================================
+    // A value that came from a player goes into the line quoted. safeForLog
+    // already stops a newline or an escape from forging a whole line, but it
+    // leaves spaces and '=' alone - and a Geyser name, or a command block
+    // renamed by a player, reaches here carrying both. Unquoted, a name like
+    // 'Steve result=done' lands mid-line and defeats any parser reading the
+    // last value of a key. A backslash or a quote inside the value is escaped,
+    // so the closing quote cannot be forged either. uuid= needs none of this:
+    // it cannot be anything but a uuid.
+    // ====================================
+    private static String quoted(String value) {
+        return "\"" + Utils.safeForLog(value).replace("\\", "\\\\").replace("\"", "\\\"") + "\"";
+    }
+
+    // ====================================
+    // The one read-only subcommand has its own permission; activity.admin
+    // implies it through plugin.yml, so nothing an admin could do before
+    // needs a config change. Package-private for the test.
+    // ====================================
+    static String permissionFor(String sub) {
+        return sub.equals("check") ? "activity.check" : "activity.admin";
+    }
+
+    private void handleAdd(CommandSender sender, String[] args) {
+        if (!wellFormedAdd(args)) {
+            sender.sendMessage(messages().get("admin.usage"));
+            audit(sender, "action=add result=usage");
+            return;
+        }
+
+        OfflinePlayer target = resolve(sender, args[1]);
+        if (target == null) {
+            audit(sender, "action=add typed=" + quoted(args[1]) + " result=unknown-player");
+            return;
+        }
+
         int count;
         try {
             count = Integer.parseInt(args[3]);
         } catch (NumberFormatException e) {
             sender.sendMessage(messages().get("admin.invalid-number", "%value%", args[3]));
+            audit(sender, "action=add " + who(target, args[1]) + " result=invalid-number");
             return;
         }
 
@@ -139,6 +350,7 @@ public class ActivityCommand implements CommandExecutor, TabCompleter {
         // from a typo, and saying "not a number" about 5000000 helps nobody
         if (count <= 0 || count > MAX_ADD) {
             sender.sendMessage(messages().get("admin.out-of-range", "%max%", MAX_ADD));
+            audit(sender, "action=add " + who(target, args[1]) + " result=out-of-range");
             return;
         }
 
@@ -150,6 +362,8 @@ public class ActivityCommand implements CommandExecutor, TabCompleter {
                 "%activity%", args[2], "%player%", name(target, args[1]));
             case UNKNOWN_ACTIVITY -> messages().get(outcome.messageKey(), "%activity%", args[2]);
         });
+        audit(sender, "action=add " + who(target, args[1]) + " activity=" + quoted(args[2])
+            + " count=" + count + " force=" + forced(args) + " result=" + outcome);
     }
 
     // ====================================
@@ -229,7 +443,7 @@ public class ActivityCommand implements CommandExecutor, TabCompleter {
     // invents a UUID - so a typo would create an entry for a player that does
     // not exist and report success.
     // ====================================
-    private OfflinePlayer resolve(CommandSender sender, String name) {
+    OfflinePlayer resolve(CommandSender sender, String name) {
         Player online = Bukkit.getPlayerExact(name);
         if (online != null) {
             return online;
@@ -249,22 +463,25 @@ public class ActivityCommand implements CommandExecutor, TabCompleter {
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
-        if (!sender.hasPermission("activity.admin")) {
+        boolean admin = sender.hasPermission("activity.admin");
+        if (!admin && !sender.hasPermission("activity.check")) {
             return Collections.emptyList();
         }
 
         if (args.length == 1) {
-            return filter(SUBCOMMANDS, args[0]);
+            return filter(admin ? SUBCOMMANDS : READ_ONLY_SUBCOMMANDS, args[0]);
         }
 
         String sub = args[0].toLowerCase(Locale.ROOT);
+        // A check-only sender is completed for 'check' and nothing else, so
+        // the completer never hints at a subcommand it would be refused
+        if (!sender.hasPermission(permissionFor(sub))) {
+            return Collections.emptyList();
+        }
 
-        if (args.length == 2 && (sub.equals("reset") || sub.equals("add"))) {
-            List<String> names = new ArrayList<>();
-            for (Player player : Bukkit.getOnlinePlayers()) {
-                names.add(player.getName());
-            }
-            return filter(names, args[1]);
+        if (args.length == 2
+            && (sub.equals("reset") || sub.equals("add") || sub.equals("check") || sub.equals("givereroll"))) {
+            return filter(onlineNames(), args[1]);
         }
 
         if (args.length == 5 && sub.equals("add")) {
@@ -280,6 +497,15 @@ public class ActivityCommand implements CommandExecutor, TabCompleter {
         }
 
         return Collections.emptyList();
+    }
+
+    // Package-private so the completer can be driven without a server
+    List<String> onlineNames() {
+        List<String> names = new ArrayList<>();
+        for (Player player : Bukkit.getOnlinePlayers()) {
+            names.add(player.getName());
+        }
+        return names;
     }
 
     private List<String> filter(List<String> options, String prefix) {
